Changes in version 1.5.1 (??.?? 2009)

 - IVideoDriver::makeColorKeyTexture() bug fixed so that only alphas, not whole texel colors, are zeroed.  An optional parameter allows using the old (buggy) behaviour for backwards compatibility.

 - MD2 mesh loader: Now uses much less memory, reduced number of allocations when loading meshes.

Changes in version 1.5 (15.12.2008)

 - Construction calls for FPS camera changed to take speed in units/milliseconds, just as the setSpeed method does.

 - Code::Blocks workspaces added.  C::B projects (using gcc) now output to /lib/gcc and /bin/gcc, when built on either Windows or Linux.

 - Added a test suite in the /tests directory.  This can be used to perform regression tests, and should be updated with new tests to verify fixes or validate new features.

 - Changed the preferred way of altering light node's radius: Use the new member methods of ILightSceneNode instead of directly modifying the SLight structure.

 - Changed the initial attenuation back to (0,1/radius,0). To override this value simply change the attenuation in the SLight (lightnode->getLightData().Attenuation.set(x,y,z))

 - Dirty fix for OSX device setResizable and a bug fix to do with resizing the device.

 - Terrain heightmap and texture were flipped in order to draw them as expected (looking onto the terrain from high above will just look like the actual texture/heightmap).

 - Significant internal change to the way that FPS camera jump speed and collision response animator gravity interact.  The behaviour is now much more realistic, but it will require you to adjust your jump speed and gravity.

 - Skybox won't be culled anymore by nearplane or farplane.

 - BBoxes of animated meshes (skinned meshes) are updated again.

 - Lost devices (as found with D3D) are properly handled now. So the screen can be resized or minimized without crashing the app.
